--- a/public/index.manifest.in
+++ b/public/index.manifest.in
@@ -1,13 +1,22 @@
 CACHE MANIFEST
 index.html
-questions.json
 assets/jquery-1.7.js
 assets/mustache.js
 assets/qa.js
 assets/shuffle.js
-assets/qa.css
-assets/faces.png
-assets/line.png
-assets/line2.png
-assets/message.png
-assets/twlogo.png
+app/assets/stylesheets/qa.css
+assets/answer1_button.png
+assets/answer2_button.png
+assets/happy_face.png
+assets/sad_face.png
+assets/instructions.png
+assets/large_button.png
+assets/play_again_button.png
+assets/purple_double_line_300ppi.png
+assets/purplr_double_line.png
+assets/quit_button.png
+assets/twlogo_small.png
+assets/twlogo_large.png
+assets/Marydale.ttf
+assets/franklin_gothic_book.ttf
+assets/franklin_gothic_demi.ttf
